--- a/styles/style.css
+++ b/styles/style.css
@@ -46,7 +46,7 @@
   left: 64px;
   width: 388px;
   line-height: 25px;
-  z-index: 1;
+  z-index: 3;
   font-size: 18px;
   font-weight: normal;
   margin: 0;
@@ -63,6 +63,7 @@
   bottom: 0px;
   width: 765px;
   height: 608px;
+  object-fit: cover;
   z-index: 2;
 }
 
@@ -179,7 +180,7 @@
   position: relative;
   flex-direction: column;
   align-items: center;
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
 }
 
@@ -229,7 +230,7 @@
   flex-direction: column;
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: black;
+  background-color: #1f1f1f;
   overflow: hidden;
   color: white;
 }
@@ -286,6 +287,8 @@
 }
 
 .kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: cover;
   width: 877px;
   height: 877px;
   position: absolute;
@@ -295,10 +298,12 @@
 }
 
 .footer {
+  display: flex;
+  box-sizing: border-box;
   min-height: 350px;
   padding-top: 60px;
   padding-bottom: 40px;
-  background-color: black;
+  background-color: #1f1f1f;
   color: white;
 }
 
@@ -307,7 +312,6 @@
   justify-content: space-between;
   width: 90%;
   margin: 0px auto;
-  height: 350px;
 }
 
 .footer__column_content_copyright {
