--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -1,6 +1,9 @@
 .cards__image{
-    width: 160px;
-    height: 160px;
-    border-radius: 50%;
-    margin: 0px 40px 43px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  margin: 0px 40px 43px;
   }
