--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -1,5 +1,6 @@
 .feynman__title {
-    width: 648px;
+    max-width: 648px;
+    width: 100%;
     margin: 100px auto 70px;
     z-index: 2;
     text-align: center;
