--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -2,7 +2,8 @@
     position: absolute;
     bottom: 30px;
     left: 64px;
-    width: 388px;
+    max-width: 388px;
+    width: 100%;
     line-height: 25px;
     z-index: 3;
     font-size: 18px;
