--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -2,7 +2,8 @@
     align-self: center;
     margin: 0px 0px 0px 64px;
     line-height: 96px;
-    width: 730px;
+    max-width: 730px;
+    width: 100%;
     font-size: 102px;
     font-weight: 600;
     z-index: 3;
