--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -1,7 +1,9 @@
 .section-subtitle {
-    width: 60%;
+    max-width: 60%;
+    width: 100%;
     line-height: 34px;
     font-size: 24px;
+    font-weight: normal;
     margin: 20px auto 0px;
     text-align: center;
   }
